zlua/_parser_gen/LuaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.5-beta001
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\91018\Desktop\zlua\zlua\Lua.g4 by ANTLR 4.6.5-beta001

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace zlua.Gen {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.5-beta001")]
[System.CLSCompliant(false)]
public partial class LuaParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, NilKW=28, FalseKW=29, TrueKW=30, VarargKW=31, 
		NotKW=32, LenKW=33, MinusKW=34, MulKW=35, DivKW=36, ModKW=37, AddKW=38, 
		ConcatKW=39, LtKW=40, MtKW=41, LeKW=42, MeKW=43, NeKW=44, EqKW=45, AndKW=46, 
		OrKW=47, NAME=48, NORMALSTRING=49, CHARSTRING=50, LONGSTRING=51, INT=52, 
		HEX=53, FLOAT=54, COMMENT=55, LINE_COMMENT=56, WS=57, SHEBANG=58;
	public const int
		RULE_chunk = 0, RULE_block = 1, RULE_retstat = 2, RULE_stat = 3, RULE_elseifBlock = 4, 
		RULE_elseBlock = 5, RULE_funcname = 6, RULE_varlist = 7, RULE_namelist = 8, 
		RULE_explist = 9, RULE_doc = 10, RULE_exp = 11, RULE_prefixexp = 12, RULE_functioncall = 13, 
		RULE_varOrExp = 14, RULE_var = 15, RULE_varSuffix = 16, RULE_nameAndArgs = 17, 
		RULE_args = 18, RULE_functiondef = 19, RULE_funcbody = 20, RULE_parlist = 21, 
		RULE_tableconstructor = 22, RULE_fieldlist = 23, RULE_field = 24, RULE_fieldsep = 25, 
		RULE_number = 26, RULE_string = 27;
	public static readonly string[] ruleNames = {
		"chunk", "block", "retstat", "stat", "elseifBlock", "elseBlock", "funcname", 
		"varlist", "namelist", "explist", "doc", "exp", "prefixexp", "functioncall", 
		"varOrExp", "var", "varSuffix", "nameAndArgs", "args", "functiondef", 
		"funcbody", "parlist", "tableconstructor", "fieldlist", "field", "fieldsep", 
		"number", "string"
	};

	private static readonly string[] _LiteralNames = {
		null, "'return'", "';'", "'='", "'break'", "'do'", "'end'", "'while'", 
		"'repeat'", "'until'", "'if'", "'then'", "'for'", "','", "'in'", "'function'", 
		"'local'", "'elseif'", "'else'", "'.'", "':'", "'^'", "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "'nil'", "'false'", "'true'", "'...'", "'not'", "'#'", 
		"'-'", "'*'", "'/'", "'%'", "'+'", "'..'", "'<'", "'>'", "'<='", "'>='", 
		"'~='", "'=='", "'and'", "'or'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "NilKW", "FalseKW", "TrueKW", "VarargKW", "NotKW", 
		"LenKW", "MinusKW", "MulKW", "DivKW", "ModKW", "AddKW", "ConcatKW", "LtKW", 
		"MtKW", "LeKW", "MeKW", "NeKW", "EqKW", "AndKW", "OrKW", "NAME", "NORMALSTRING", 
		"CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "COMMENT", "LINE_COMMENT", 
		"WS", "SHEBANG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Lua.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public LuaParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ChunkContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(LuaParser.Eof, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_chunk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; block();
			State = 57; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public RetstatContext retstat() {
			return GetRuleContext<RetstatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__11) | (1L << T__14) | (1L << T__15) | (1L << T__21) | (1L << NAME))) != 0)) {
				{
				{
				State = 59; stat();
				}
				}
				State = 64;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 66;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__0) {
				{
				State = 65; retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RetstatContext : ParserRuleContext {
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public RetstatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_retstat; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRetstat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RetstatContext retstat() {
		RetstatContext _localctx = new RetstatContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_retstat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(T__0);
			State = 70;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__21) | (1L << T__25) | (1L << NilKW) | (1L << FalseKW) | (1L << TrueKW) | (1L << VarargKW) | (1L << NotKW) | (1L << LenKW) | (1L << MinusKW) | (1L << NAME) | (1L << NORMALSTRING) | (1L << CHARSTRING) | (1L << LONGSTRING) | (1L << INT) | (1L << HEX) | (1L << FLOAT))) != 0)) {
				{
				State = 69; explist();
				}
			}

			State = 73;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__1) {
				{
				State = 72; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
	 
		public StatContext() { }
		public virtual void CopyFrom(StatContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EmptyStatContext : StatContext {
		public EmptyStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmptyStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignStatContext : StatContext {
		public VarlistContext varlist() {
			return GetRuleContext<VarlistContext>(0);
		}
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public AssignStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctioncallStatContext : StatContext {
		public FunctioncallContext functioncall() {
			return GetRuleContext<FunctioncallContext>(0);
		}
		public FunctioncallStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctioncallStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BreakStatContext : StatContext {
		public BreakStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBreakStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DoendStatContext : StatContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public DoendStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDoendStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileStatContext : StatContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public WhileStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RepeatStatContext : StatContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public RepeatStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRepeatStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfelseStatContext : StatContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseifBlockContext[] elseifBlock() {
			return GetRuleContexts<ElseifBlockContext>();
		}
		public ElseifBlockContext elseifBlock(int i) {
			return GetRuleContext<ElseifBlockContext>(i);
		}
		public ElseBlockContext elseBlock() {
			return GetRuleContext<ElseBlockContext>(0);
		}
		public IfelseStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfelseStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForijkStatContext : StatContext {
		public ITerminalNode NAME() { return GetToken(LuaParser.NAME, 0); }
		public ExpContext[] exp() {
			return GetRuleContexts<ExpContext>();
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ForijkStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForijkStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForinStatContext : StatContext {
		public NamelistContext namelist() {
			return GetRuleContext<NamelistContext>(0);
		}
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ForinStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForinStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctiondefStatContext : StatContext {
		public FuncnameContext funcname() {
			return GetRuleContext<FuncnameContext>(0);
		}
		public FuncbodyContext funcbody() {
			return GetRuleContext<FuncbodyContext>(0);
		}
		public FunctiondefStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctiondefStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LocalfunctiondefStatContext : StatContext {
		public ITerminalNode NAME() { return GetToken(LuaParser.NAME, 0); }
		public FuncbodyContext funcbody() {
			return GetRuleContext<FuncbodyContext>(0);
		}
		public LocalfunctiondefStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalfunctiondefStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LocalassignStatContext : StatContext {
		public NamelistContext namelist() {
			return GetRuleContext<NamelistContext>(0);
		}
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public LocalassignStatContext(StatContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalassignStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_stat);
		int _la;
		try {
			State = 148;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new EmptyStatContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 75; Match(T__1);
				}
				break;

			case 2:
				_localctx = new AssignStatContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 76; varlist();
				State = 77; Match(T__2);
				State = 78; explist();
				}
				break;

			case 3:
				_localctx = new FunctioncallStatContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 80; functioncall();
				}
				break;

			case 4:
				_localctx = new BreakStatContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 81; Match(T__3);
				}
				break;

			case 5:
				_localctx = new DoendStatContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 82; Match(T__4);
				State = 83; block();
				State = 84; Match(T__5);
				}
				break;

			case 6:
				_localctx = new WhileStatContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 86; Match(T__6);
				State = 87; exp(0);
				State = 88; Match(T__4);
				State = 89; block();
				State = 90; Match(T__5);
				}
				break;

			case 7:
				_localctx = new RepeatStatContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 92; Match(T__7);
				State = 93; block();
				State = 94; Match(T__8);
				State = 95; exp(0);
				}
				break;

			case 8:
				_localctx = new IfelseStatContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 97; Match(T__9);
				State = 98; exp(0);
				State = 99; Match(T__10);
				State = 100; block();
				State = 104;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__16) {
					{
					{
					State = 101; elseifBlock();
					}
					}
					State = 106;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 108;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__17) {
					{
					State = 107; elseBlock();
					}
				}

				State = 110; Match(T__5);
				}
				break;

			case 9:
				_localctx = new ForijkStatContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 112; Match(T__11);
				State = 113; Match(NAME);
				State = 114; Match(T__2);
				State = 115; exp(0);
				State = 116; Match(T__12);
				State = 117; exp(0);
				State = 120;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__12) {
					{
					State = 118; Match(T__12);
					State = 119; exp(0);
					}
				}

				State = 122; Match(T__4);
				State = 123; block();
				State = 124; Match(T__5);
				}
				break;

			case 10:
				_localctx = new ForinStatContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 126; Match(T__11);
				State = 127; namelist();
				State = 128; Match(T__13);
				State = 129; explist();
				State = 130; Match(T__4);
				State = 131; block();
				State = 132; Match(T__5);
				}
				break;

			case 11:
				_localctx = new FunctiondefStatContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 134; Match(T__14);
				State = 135; funcname();
				State = 136; funcbody();
				}
				break;

			case 12:
				_localctx = new LocalfunctiondefStatContext(_localctx);
				EnterOuterAlt(_localctx, 12);
				{
				State = 138; Match(T__15);
				State = 139; Match(T__14);
				State = 140; Match(NAME);
				State = 141; funcbody();
				}
				break;

			case 13:
				_localctx = new LocalassignStatContext(_localctx);
				EnterOuterAlt(_localctx, 13);
				{
				State = 142; Match(T__15);
				State = 143; namelist();
				State = 146;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__2) {
					{
					State = 144; Match(T__2);
					State = 145; explist();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseifBlockContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseifBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseifBlock; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseifBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseifBlockContext elseifBlock() {
		ElseifBlockContext _localctx = new ElseifBlockContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_elseifBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150; Match(T__16);
			State = 151; exp(0);
			State = 152; Match(T__10);
			State = 153; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseBlockContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseBlock; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseBlockContext elseBlock() {
		ElseBlockContext _localctx = new ElseBlockContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_elseBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155; Match(T__17);
			State = 156; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncnameContext : ParserRuleContext {
		public ITerminalNode[] NAME() { return GetTokens(LuaParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(LuaParser.NAME, i);
		}
		public FuncnameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcname; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILuaVisitor<TResult> typedVisitor = visitor as ILuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncname(this);
			else return visitor.VisitChildren(this);
		}
	}
